# early_wildfire_perception

./: README.md
H20T_visiable_calbi/: H20T_visible_param.yaml  Thumbs.db  distorch_rad.txt  errors.mat  find_H20T_param.py  in_param.txt  matlab.mat
align_ir_rgb/: CMakeLists.txt
align_ir_rgb/include/align_ir_rgb/: align_ir_rgb_g2o.h  tools.h
align_ir_rgb/include/align_ir_rgb/PrintControl/: FileWritter.hpp
align_ir_rgb/scripts/: estimated_param.txt
align_ir_rgb/scripts/.ipynb_checkpoints/: draw-checkpoint.ipynb
align_ir_rgb/src/: align_ir_rgb.cc  align_ir_rgb_g2o.cc  test_each_measurement.cc  test_files_reading.cc  tools.cc
m300_depth_filter/: CMakeLists.txt  abs_rel_pose.csv
m300_depth_filter/include/m300_depth_filter/: AbsolutePoseRecover.hpp  Dataset.hpp  DepthFilter.hpp  FileWritter.hpp  Frame.hpp  SegmentLocationFinder.hpp  SystemLib.hpp  Triangulator.hpp
m300_depth_filter/src/: AbsolutePoseRecover.cpp  CMakeLists.txt  Dataset.cpp  DepthFilter.cpp  Frame.cpp  SegmentLocationFinder.cpp  Triangulator.cpp  align_ir_rgb.cpp  test_AbsolutePoseRecover.cpp  test_DepthFilter.cpp  test_SegmentLocationFinder.cpp
m300_pose_correction/: CMakeLists.txt
m300_pose_correction/include/pose_correction/app/: pose_corrector.h
m300_pose_correction/include/pose_correction/modules/: ORBextractor.h  camera.h  dataset.h  feature_matcher.h  frame.h  system_lib.h  viewer.h
m300_pose_correction/src/: CMakeLists.txt
m300_pose_correction/src/app/: CMakeLists.txt  pose_corrector.cc
m300_pose_correction/src/modules/: CMakeLists.txt  ORBextractor.cc  dataset.cc  feature_matcher.cc  frame.cc  viewer.cc
m300_pose_correction/src/test/: CMakeLists.txt  test_dataset.cc  test_feature_matcher.cc  test_pose_corrector.cc
